src/objects/Product_Relationship__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>Child_Product_Type__c</fullName>
        <formula>TEXT(Child_Product__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part/Component Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.Type__c</field>
                <operation>equals</operation>
                <value>Part, Component</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Parent Relationship</relationshipLabel>
        <relationshipName>Products_Relationship1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Type__c</fullName>
        <formula>TEXT(Parent_Product__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.Type__c</field>
                <operation>equals</operation>
                <value>Finished Product, Part</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Child Relationship</relationshipLabel>
        <relationshipName>Products_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Relationship_Id__c</fullName>
        <description>This is combination of Parent Product and Product so user should not crate duplicate combination.</description>
        <label>Product Relationship Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Product_Relationship</fullName>
        <columns>NAME</columns>
        <columns>Parent_Product_Type__c</columns>
        <columns>Parent_Product__c</columns>
        <columns>Child_Product_Type__c</columns>
        <columns>Child_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>Product Relationship</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Product Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Relationship</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Child_Product_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Parent_Product__r.Type__c, &quot;Part&quot;),ISPICKVAL(Child_Product__r.Type__c, &quot;Part&quot;))</errorConditionFormula>
        <errorDisplayField>Child_Product__c</errorDisplayField>
        <errorMessage>Child Product should be Component if Parent product is of type Part.</errorMessage>
    </validationRules>
</CustomObject>